// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component check Cell renders correct 1`] = `
<DocumentFragment>
  <div
    class="css-181gde3"
    data-testid="1,1"
    role="cell"
  >
    0
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 2`] = `
<DocumentFragment>
  <div
    class="css-rautmg"
    data-testid="1,1"
    role="cell"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 3`] = `
<DocumentFragment>
  <div
    class="css-1bgv23n"
    data-testid="1,1"
    role="cell"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 4`] = `
<DocumentFragment>
  <div
    class="css-1a0mj5a"
    data-testid="1,1"
    role="cell"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 5`] = `
<DocumentFragment>
  <div
    class="css-cqtswd"
    data-testid="1,1"
    role="cell"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 6`] = `
<DocumentFragment>
  <div
    class="css-1v6e91"
    data-testid="1,1"
    role="cell"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 7`] = `
<DocumentFragment>
  <div
    class="css-kz37mh"
    data-testid="1,1"
    role="cell"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 8`] = `
<DocumentFragment>
  <div
    class="css-1agi70y"
    data-testid="1,1"
    role="cell"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 9`] = `
<DocumentFragment>
  <div
    class="css-siu7y"
    data-testid="1,1"
    role="cell"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 10`] = `
<DocumentFragment>
  <div
    class="css-9g680z"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-3tubcw"
      data-testid="bomb_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 11`] = `
<DocumentFragment>
  <div
    class="css-1v5gl4b"
    data-testid="1,1"
    role="cell"
  >
    10
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 12`] = `
<DocumentFragment>
  <div
    class="css-1v5gl4b"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-1a8jebs"
    />
    <div
      class="css-1a8jebs"
      data-testid="flag_1,1"
    >
      11
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correct 13`] = `
<DocumentFragment>
  <div
    class="css-1v5gl4b"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-9d5cwe"
    />
    <div
      class="css-9d5cwe"
      data-testid="weakFlag_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 1`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 2`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 3`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 4`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 5`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 6`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 7`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 8`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 9`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 10`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 11`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 12`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correct 13`] = `
<DocumentFragment>
  <div
    class="css-1lcj7pf"
  />
</DocumentFragment>
`;
